--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,8 @@ kramdown:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
 
+#theme
+remote_theme: poole/hyde
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
